Refactors the site frame style, fixes wrong size

--- a/source/css/signup.css
+++ b/source/css/signup.css
@@ -65,29 +65,9 @@
   }
 }
 
-/* @media only screen and (max-width: 350px) { */
 @media only screen and (max-width: 460px) {
   .signup {
     height: 480px;
-  }
-}
-
-.signup-container {
-  width: 95%;
-  max-width: 1352px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media only screen and (max-width: 904px) {
-  .signup-container {
-    width: 80%;
-  }
-}
-
-@media only screen and (max-width: 528px) {
-  .signup-container {
-    width: 90%;
   }
 }
 
