--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -47,6 +47,25 @@ input {
   margin: 0;
 }
 
+.site-frame {
+  width: 95%;
+  max-width: 1352px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media only screen and (max-width: 904px) {
+  .site-frame {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 528px) {
+  .site-frame {
+    width: 90%;
+  }
+}
+
 .illustration-container {
   overflow: hidden;
 }
@@ -62,8 +81,6 @@ input {
 
 
 .intro {
-  width: 95%;
-  max-width: 1352px;
   padding-top: 100px;
   margin-bottom: 100px;
   margin-left: auto;
@@ -92,13 +109,6 @@ input {
   }
 }
 
-/* @media only screen and (max-width: 440px) {
-  .intro {
-    margin-bottom: 12px;
-  }
-} */
-
-/* @media only screen and (max-width: 350px) { */
 @media only screen and (max-width: 460px) {
   .intro {
     padding-top: 35px;
@@ -404,10 +414,6 @@ input {
 }
 
 .description {
-  width: 95%;
-  max-width: 1352px;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 100px;
   text-align: center;
 }
@@ -571,10 +577,6 @@ input {
 }
 
 .gallery-container {
-  width: 95%;
-  max-width: 1352px;
-  margin-left: auto;
-  margin-right: auto;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   column-gap: 1.5%;
@@ -620,10 +622,6 @@ footer {
 }
 
 .cta {
-  width: 95%;
-  max-width: 1352px;
-  margin-left: auto;
-  margin-right: auto;
   padding-bottom: 100px;
   font-size: 36px;
   text-align: center;
@@ -665,10 +663,6 @@ footer {
 }
 
 .footer-credit-container {
-  width: 95%;
-  max-width: 1352px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 30px;
   padding-bottom: 40px;
 }
